Fixed z-index causing popup to be unclickable

--- a/themes/SuiteP/css/yui.scss
+++ b/themes/SuiteP/css/yui.scss
@@ -895,7 +895,7 @@ span.yui-carousel-first-button-disabled {
 .yui-overlay,.yui-panel-container {
   position: absolute;
   visibility: hidden;
-  z-index: 2;
+  z-index: 3;
 }
 
 .yui-panel-container form {
